--- a/menu-categories.html
+++ b/menu-categories.html
@@ -42,13 +42,12 @@
 			
 			<div id="collapsable-nav" class="collapse navbar-collapse">
 				<ul id="nav-list" class="nav navbar-nav navbar-right">
-					<li class="visible-xs active">
+					<li class="visible-xs">
 						<a href="hasenepinar.html">
 							<span class="glyphicon glyphicon-home"></span> Home
 						</a>
 					</li>
-				
-					<li>
+					<li class="active">
 						<a href="menu-categories.html">
 							<span class="glyphicon glyphicon-cutlery" ></span><br class="hidden-xs"> Menu </a>
 					</li>
@@ -79,22 +78,90 @@
 <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
 <div id="main-content" class="container">
-	<div class="jumbotron">
-		<img src="images/jumbotron_768.jpg" alt="Picture of Restaurant" class="img-responsive visible-xs">
-	</div>
-	
-	<div id="home-tiles" class="row">
-		<div class="col-md-4 col-sm-6 col-xs-12">
-			<a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+	<h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
+	<div class="text-center"> Bla bla bla bla bla bllalalalala la blalalala blabla </div> 
+	<section class="row">
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
 		</div>
-		<div class="col-md-4 col-sm-6 col-xs-12">
-			<a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
 		</div>
-		<div class="col-md-4 col-sm-12 col-xs-12">
-			<a href="https://www.google.com.tr/maps/place/Cafera%C4%9Fa,+G%C3%BCl+Sk.,+34710+Kad%C4%B1k%C3%B6y%2F%C4%B0stanbul/@40.9815128,29.0237485,17.29z/data=!4m5!3m4!1s0x14cab8602ac65c5f:0xf5bd289e6fbc63d8!8m2!3d40.9815064!4d29.0254177?hl=tr" target="_blank"><div id="map-tile"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.1612614804594!2d29.02374846811475!3d40.98151279650905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab8602ac65c5f%3A0xf5bd289e6fbc63d8!2zQ2FmZXJhxJ9hLCBHw7xsIFNrLiwgMzQ3MTAgS2FkxLFrw7Z5L8Swc3RhbmJ1bA!5e0!3m2!1str!2str!4v1484583562760" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> <span>map</span></div></a>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
 		</div>
-	</div>
-	
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+			<a href="single-category.html">
+				<div class="category-tile">
+					<img width="200" height="200" src="images/restaurant-logo_large.png" alt="Lunch">
+					<span>Lunch</span>
+				</div>
+			</a>
+		</div>
+	</section>
 </div>
 	
 <footer class="panel-footer">
