--- a/index.html
+++ b/index.html
@@ -1,74 +1,13 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-
-    <title>Food,LLC</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
+</head>
 <body>
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="jquery-3.1.1.min.js"></script>
-<script src="bootstrap.min.js"></script>
-<script src="script.js"></script>	
-	<header>
-		<nav id="P-header-nav" class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header">
-					<div class="navbar-brand">
-						<a href="index.html"><h1>Food,LLC</h1></a>
-					</div>
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#P-collapsable-nav" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>	
-					</button>
-				 </div>
-			</div>
-			<div class="col-xs-12">
-				 <div id="P-collapsable-nav" class="collapse navbar-collapse ">
-				 	<ul class="navbar-list nav navbar-nav navbar-right">
-				 		<li class="visible-xs"> <a href="#chicken"> Chicken </a></li>
-				 		<li class="visible-xs"> <a href="#beef"> Beef </a></li>
-				 		<li class="visible-xs"> <a href="#sushi"> Sushi </a></li>
-				 	</ul>
-				 </div>
-			</div>
-		</nav>
-	</header>
-	
-	<h2 id="page-top" class="text-center"> Our Menu </h2>
-				
-	<div id="main-content" class="container">
-	
-		<div id="icerik" class="row">
-			<div  class="col-md-12 col-sm-12 col-xs-12">
-				<div id="icerik-chicken">
-					<h4 id="chicken" class="text-center">Chicken</h4>
-					<p id="chicken-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo.</p>
-				</div>
-			</div>
-			<div  class="col-md-12 col-sm-12 col-xs-12">
-				<div id="icerik-beef">
-					<h4 id="beef" class="text-center">Beef</h4>
-					<p id="beef-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo.</p>
-				</div>
-			</div>
-			<div  class="col-md-12 col-sm-12 col-xs-12">
-				<div id="icerik-sushi">
-					<h4 id="sushi" class="text-center">Sushi</h4>
-					<p id="sushi-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel hendrerit ipsum. Nam bibendum pretium risus. Ut aliquet mi non fringilla pulvinar. Proin eleifend augue justo. Integer lectus velit, malesuada non semper a, mattis vel mauris. Morbi pharetra dignissim magna, eu placerat mauris. Nam dolor ex, finibus eu justo non, bibendum efficitur est. Nunc in vestibulum ante. Donec rutrum vestibulum ex, at congue lacus varius a. Praesent sed velit ac mauris fringilla tristique quis non elit. Suspendisse quis placerat nunc. Curabitur sed nibh ac felis vestibulum varius. Praesent mattis dolor vestibulum ultrices vestibulum. Praesent mattis imperdiet varius. Etiam sit amet ipsum non lectus sagittis dapibus. Donec vitae egestas elit. In vitae velit velit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In at dui tempor, condimentum turpis ac, gravida velit. Integer vitae dapibus augue, vel viverra dolor. Suspendisse mi felis, cursus ac ante non, viverra dignissim sem. In sed risus justo.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div>
-		<a href="#P-header-nav" > Back To Top </a>
-	</div>
+  <h1>Module 4 Solution - Pınar</h1>
 </body>
 </html>
